...
        SizedBox(height: 20),
        _buildErrorText(),
        if (_isLoading)
          Center(child: CircularProgressIndicator())
        else
          ElevatedButton(
            key: Key('registerButton'),
            onPressed: _register,
            style: ElevatedButton.styleFrom(
              padding: EdgeInsets.symmetric(vertical: 16),
              backgroundColor: Colors.red.shade700,
              shape: RoundedRectangleBorder(
                borderRadius: BorderRadius.circular(8),
...
